--- a/todo
+++ b/todo
@@ -1,1 +1,31 @@
-C'est trop bien git
+git clone https://github.com/kaldoran/gl.git [nomfichier]
+nom fichier étant optionnel
+
+cd nomfichier
+
+Ajouter les fichiers
+git add nomfichieraajouter
+git commit -a [ -m "message" ]
+
+git push
+
+Puis : 
+Recuperer les fichiers : 
+git pull 
+
+
+Avant toute chose : 
+git commit -a [-m "message" ]
+
+puis :
+git pull
+
+puis :
+git push
+
+
+Commandes utiles : 
+
+git status 
+
+pour voir les actions en cours
