Ajout modele, modification rapport1

--- a/Rapport_reunion/Modele_rapport_reunion.tex
+++ b/Rapport_reunion/Modele_rapport_reunion.tex
@@ -9,7 +9,7 @@
   pdftoolbar=false, % show Acrobat's toolbar?
   pdfmenubar=false, % show Acrobat's menu?
   pdffitwindow=true, % page fit to window when opened
-  pdftitle={Rapport Genie Logiciel}, % title
+  pdftitle={Rapport Genie logiciel}, % title
   pdfauthor={REYNAUD Nicolas}, % author
   pdfsubject={thèse}, % subject of the document
   pdfnewwindow=true, % links in new window
