--- a/Rapport_reunion/Rapport_reunion_1.tex
+++ b/Rapport_reunion/Rapport_reunion_1.tex
@@ -11,7 +11,7 @@
   pdffitwindow=true, % page fit to window when opened
   pdftitle={Rapport Genie Logiciel}, % title
   pdfauthor={REYNAUD Nicolas}, % author
-  pdfsubject={thèse}, % subject of the document
+  pdfsubject={report}, % subject of the document
   pdfnewwindow=true, % links in new window
   colorlinks=true, % false: boxed links; true: colored links
   linkcolor=black, % color of internal links
@@ -20,7 +20,6 @@
   urlcolor=blue % color of external links
 }
 
-\usepackage{manyfoot}
 \usepackage[stable]{footmisc}
 \usepackage{geometry}
 \usepackage{graphicx}
@@ -41,8 +40,36 @@
 \tableofcontents
 \newpage
 
-\section{Rapport reunion \#Chiffre}
-Texte ici
+
+\section{Introduction}
+
+L'entreprise $\textbf{K}$ould$\textbf{N}$ot$\textbf{K}$onnect, en référence à leurs créateurs désire la création d'un outil permettant de gérer et unifier leurs serveurs FTP.
+
+Logiciel ayant pour nom KouldNotShare, sera développé en Java.
+
+\section{Les outils}
+
+Lors de la première réunion, nous avons décidé d'utiliser les outils suivant : 
+\begin{itemize}
+	\item Github - Git : Site de gestion de version associé au gestionnaire en ligne de commande Git.
+	\item Planner : Logiciel planification ( Diagramme de Gantt ).
+	\item Netbean : IDE de développement Java.
+	\item Texmaker / Latex : Pour la rédaction des rapports
+\end{itemize}
+
+\section{Mise en place des outils}
+
+Lors de notre première réunion, nous avons également mis en place ( Configuration, et clonage du répertoire) de l'utilitaire Git. \\
+Celle ci à également été suivit d'une formation à Git ( Ligne de commandes ). \\
+
+Nous en avons profité pour découvrir / Tester Planner. \\
+De plus, un modèle latex de compte rendu a été mis en place. \\
+
+\section{Éclaircir le sujet}
+
+
+
+
 
 \end{document}
 
