Modification par k.L du rapport 1

--- a/Rapport_reunion/Rapport_reunion_1.tex
+++ b/Rapport_reunion/Rapport_reunion_1.tex
@@ -41,35 +41,34 @@
 \newpage
 
 
-\section{Introduction}
+\section{Scénario du projet}
 
-L'entreprise $\textbf{K}$ould$\textbf{N}$ot$\textbf{K}$onnect, en référence à leurs créateurs désire la création d'un outil permettant de gérer et unifier leurs serveurs FTP.
+L'entreprise $\textbf{K}$ould$\textbf{N}$ot$\textbf{K}$onnect, en référence à leurs créateurs, désire la création d'un outil permettant de gérer et d'unifier leurs serveurs FTP.
 
-Logiciel ayant pour nom KouldNotShare, sera développé en Java.
+Le logiciel aura pour nom KouldNotShare et sera développé en Java.
 
 \section{Les outils}
 
 Lors de la première réunion, nous avons décidé d'utiliser les outils suivant : 
 \begin{itemize}
-	\item Github - Git : Site de gestion de version associé au gestionnaire en ligne de commande Git.
-	\item Planner : Logiciel planification ( Diagramme de Gantt ).
+	\item Github : Site de gestion de version associé au gestionnaire en ligne de commande Git.
+	\item Planner : Logiciel de planification ( Diagramme de Gantt ).
 	\item Netbean : IDE de développement Java.
-	\item Texmaker / Latex : Pour la rédaction des rapports
+	\item Texmaker / Latex : Pour la rédaction des rapports.
 \end{itemize}
 
 \section{Mise en place des outils}
 
-Lors de notre première réunion, nous avons également mis en place ( Configuration, et clonage du répertoire) de l'utilitaire Git. \\
-Celle ci à également été suivit d'une formation à Git ( Ligne de commandes ). \\
+Lors de notre première réunion, nous avons également mis en place ( configuration et clonage du répertoire) de l'utilitaire Git. \\
+Celle-ci a également été suivit d'une formation à Git ( Ligne de commandes ). \\
 
-Nous en avons profité pour découvrir / Tester Planner. \\
+Nous en avons profité pour découvrir et tester Planner. \\
 De plus, un modèle latex de compte rendu a été mis en place. \\
 
-\section{Éclaircir le sujet}
+\section{Éclaircissement du sujet}
 
+Nous avons cherché à approfondir le sujet, pour que chaque personne de l'équipe comprenne le sujet avant de nous lancer dans la planification, et nous avons réfléchi sur les fonctionnalités de notre sujet.\linebreak
 
-
-
-
+Nous nous sommes mis d'accord sur le fait qu'il y aura un côté client et un côté serveur, tous deux développés par notre équipe.
 \end{document}
 
