changement rapport reunion

--- a/Rapport_reunion/Rapport_reunion_2.tex
+++ b/Rapport_reunion/Rapport_reunion_2.tex
@@ -3,21 +3,22 @@
 \usepackage[T1]{fontenc}
 \usepackage[francais]{babel}
 \usepackage{hyperref}
-\usepackage{parselines} 
+\usepackage{parselines}
+
 \hypersetup{
-  unicode=false, % non-Latin characters bookmarks
-  pdftoolbar=false, % show Acrobat's toolbar?
-  pdfmenubar=false, % show Acrobat's menu?
-  pdffitwindow=true, % page fit to window when opened
-  pdftitle={Rapport Genie logiciel}, % title
-  pdfauthor={REYNAUD Nicolas}, % author
-  pdfsubject={thèse}, % subject of the document
-  pdfnewwindow=true, % links in new window
-  colorlinks=true, % false: boxed links; true: colored links
-  linkcolor=black, % color of internal links
-  citecolor=green, % color of links to bibliography
-  filecolor=magenta, % color of file links
-  urlcolor=blue % color of external links
+unicode=false, % non-Latin characters bookmarks
+pdftoolbar=false, % show Acrobat's toolbar?
+pdfmenubar=false, % show Acrobat's menu?
+pdffitwindow=true, % page fit to window when opened
+pdftitle={Rapport Genie logiciel}, % title
+pdfauthor={REYNAUD Nicolas}, % author
+pdfsubject={thèse}, % subject of the document
+pdfnewwindow=true, % links in new window
+colorlinks=true, % false: boxed links; true: colored links
+linkcolor=black, % color of internal links
+citecolor=green, % color of links to bibliography
+filecolor=magenta, % color of file links
+urlcolor=blue % color of external links
 }
 
 \usepackage{manyfoot}
@@ -30,57 +31,46 @@
 
 \title{Rapport Reunion \#2}
 \author{Auteur : Nicolas \bsc{Reynaud}}
-\date{1 Octobre 2014}
+\date{14 Octobre 2014}
+
+\parindent=0pt
 
 \begin{document}
 
 \maketitle
 \newpage
 
-\renewcommand{\contentsname}{Sommaire}
-\tableofcontents
-\newpage
+Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 
-\section{Rapport reunion \#1}
+\subsection*{Ordre du jour}
+\indent -Décider de la planification\\
+-Faire le diagramme de gantt\\
 
-Présent à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
+\subsection*{Rôles des membres du groupe}
+Bascol Kevin \& Reynaud Nicolas ont pré-établi l'organisation.\\
+\indent Laoussing Kévin, quant à lui, a réalisé le diagramme de gantt sur planner.\\
+\indent Reynaud Nicolas a aussi regardé un exemple de rapport de réunion et l'a rédigé.\\
 
-\subsection{Ordre du jours}
-Faire la planification, le diagramme de gantt et vérifier le tout.\\
+\subsection*{Résultats de la réunion}
+Nous avons choisi de faire un diagramme de gantt car celui-ci était le plus représentatif d'une planification.\\
 
-\subsection{Rôle des membres de l'équipe}
+La planification a été faite en accord avec tout les membres mais également en prenant en compte que le mois de décembre serait certainement très chargé ( partiels etc ). Voila pourquoi la plupart des documents devraient être rendus avant décembre.\\
 
-Bascol Kevin \& Reynaud Nicolas on pré-établi l'organisation.\\
-\indent Laoussing Kévin quand a lui a réalisé le diagramme de gantt sur planner.\\
-\indent Reynaud Nicolas : Regarder un exemple de rapport de réunion et le faire.\\
+La répartition du travail quant à elle a été décidée en fonction du bon vouloir de chacun tout en répartissant également la charge de travail qui avait été évaluée pour chaque tache.\\
 
-\subsection{Aléa lors de la réunion}
+Le diagramme a été fait à l'aide du logiciel planner, celui étant léger et simple d'utilisation, nous n'avons pas poussé la recherche plus loin puisque cela correspondait à nos attentes.
+Il permet également d'exporter le diagramme en version html afin de simplifier l'accès.\\
+Kévin Laoussing, responsable du diagramme, nous a présenté la première version du diagramme, qui a été validée.\\
 
-La réunion a été interrompu pendant 7 min par M. Aubri Ugo. \\
+A noter que les différents cahiers des tests seront réalisés en parallèle des documents qui leurs sont associés ( document de spécification \& document de conception générale et détaillée ).\\
 
-\subsection{Résultat de la réunion}
+\subsection*{Aléa lors de la réunion}
+La réunion a été interrompue pendant 7 min par M. Aubri Ugo. \\
 
-Nous avons choisi de faire un diagramme de gantt car celui ci était le plus représentatif d'une planification.
-
-La planification a été fait en accord avec tout les membres mais également en prenant en compte que le mois de décembre serait certainement très chargé ( partielle etc ). Voila pourquoi la plupart des documents seront rendu avant décembre.\\
-
-A noté que les différents cahier des tests seront réalisé en parallèles des document qui leurs sont associés ( document de spécification \& document de conception générale et détaillée ).\\
-
-La répartition de travail quand à elle a été décidée en fonction du bon vouloir de chacun tout en répartissant également la charge de travail qui avait été évalué pour chaque taches.\\
-
-Le Diagramme a été fait a l'aide du logiciel planner, celui étant lège et simple d'utilisation, nous n'avons pas poussé la recherche plus loin car celui ci correspondait à nos attentes.
-Il permettait également d'exporter le diagramme en version html afin de simplifier l'accès.\\
-
-Kévin Laoussing responsable du diagramme nous à présenté sa version numéro 1 u diagramme, qui a été validé.\\
-Le diagramme a été réalisé à la suite de notre réunion.
-
-\subsection{Prochaine réunion}
-
+\subsection*{Prochaine réunion}
 La prochaine réunion est fixée au 21 Octobre 2014.\\
 
-\subsection{Cloture de la séance}
-
-La séance s'est levée à 16h00. \\
+\subsection*{Clôture de la séance}
+La séance a été levée à 16h00. \\
 
 \end{document}
-
