légère modif du rapport #3

--- a/Rapport_reunion/Rapport_reunion_3.tex
+++ b/Rapport_reunion/Rapport_reunion_3.tex
@@ -65,6 +65,9 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 %----------------------------------Prochaine réunion------------------------------------%
 \subsection*{Prochaine réunion : 28 octobre 2014}
 
-\textbf{Ordre du jour} : Déterminer les exigences du client concernant l'interface graphique du client et du serveur.
+\textbf{Ordre du jour} : Déterminer les exigences du client concernant l'interface graphique du client et du serveur.\\
+
+\textbf{Remarque} : Étant donnée l'impossibilité de se réunir physiquement durant la semaine de vacances, la prochaine réunion se fera en visio-conférence avec le logiciel skype, celui-ci étant déjà installé sur toute les machines de l'équipe.
+
 
 \end{document}
