--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -190,7 +190,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 	
 \paragraph{Partage de fichiers}
 	\begin{itemize}[label = $\triangleright$]
-		\item a
+		\item \textcolor{red}{NEED TO DO IT}
 	\end{itemize}
 	
 \paragraph{Gestionnaire de comptes utilisateurs}
