rapport reunion 4 avec annexes

--- a/Rapport_reunion/Rapport_reunion_4.tex
+++ b/Rapport_reunion/Rapport_reunion_4.tex
@@ -64,6 +64,17 @@ Présents à la réunion: Kévin Laoussing, Nicolas Reynaud et Kevin Bascol.
 	\textbf{Ordre du jour:} préparation du cahier de conception générale.
 	
 \subsection*{Remarque}
-Utilisation d'un site de dessin collaboratif dans le but de réfléchir l'interface graphique ensemble. http://flockdraw.com/.
+\begin{itemize}
+\item Utilisation d'un site de dessin collaboratif dans le but de réfléchir l'interface graphique ensemble. http://flockdraw.com/.
+\item Pour des raisons de disponibilité des membres la réunion a été reportée du 28 octobre au 29 octobre.
+\end{itemize}
+
+\newpage
+
+\subsection*{Annexes}
+Esquisses des interfaces\\
+\begin{center}
+	\includegraphics{Interface_projet_gl.png}
+\end{center}
 
 \end{document}
